--- a/index.html
+++ b/index.html
@@ -5,131 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT Tycoon</title>
     <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            display: grid;
-            grid-template-areas:
-                "header header"
-                "tickets engineers"
-                "actions actions"
-                "progress progress";
-            grid-template-columns: 1fr 1fr;
-            gap: 20px;
-            padding: 20px;
-            **background-color: #e8f5e9; /* Changed to Light Green */**
-            color: #333;
-        }
-        header {
-            grid-area: header;
-            text-align: center;
-            border-bottom: 2px solid #ddd;
-            padding-bottom: 10px;
-        }
-        h1, h2 {
-            margin: 0;
-        }
-        #stats {
-            font-size: 1.2em;
-            font-weight: bold;
-            color: #27ae60;
-        }
-        .container {
-            background-color: #ffffff;
-            border-radius: 8px;
-            padding: 20px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-        }
-        
-        /* STYLING CHANGE: Available Tickets container is now yellow */
-        #tickets { 
-            grid-area: tickets;
-            background-color: #fffac8; /* A nice light yellow */
-            border: 1px solid #f1c40f; 
-        }
-        
-        #engineers { grid-area: engineers; }
-        #in-progress { grid-area: progress; }
-        #actions { grid-area: actions; text-align: center; }
+       <style>
+    body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+        display: grid;
+        grid-template-areas:
+            "header header"
+            "tickets engineers"
+            "actions actions"
+            "progress progress";
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+        padding: 20px;
+        background-color: #e8f5e9; /* Light Green */
+        color: #333;
+    }
+    /* ... (other styles) ... */
 
-        .ticket, .engineer {
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 10px;
-            margin-bottom: 10px;
-            cursor: pointer;
-            transition: all 0.2s ease;
-            background-color: #ffffff; /* Ensure inner tickets are white */
-        }
-        .ticket:hover, .engineer.idle:hover {
-            border-color: #3498db;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .engineer.idle {
-            background-color: #e8f5e9; 
-        }
-        .engineer.working {
-            background-color: #fff8e1; 
-            cursor: not-allowed;
-            opacity: 0.7;
-        }
-        /* Custom colors for selection */
-        .ticket.selected {
-            background-color: #f7cac9; /* Light Red/Pink for Ticket Selection */
-            border: 2px solid #e74c3c;
-        }
-        .engineer.selected {
-            background-color: #bbded6; /* Light Teal/Green for Engineer Selection */
-            border: 2px solid #16a085;
-        }
-        .progress-bar {
-            width: 100%;
-            background-color: #eee;
-            border-radius: 5px;
-            height: 20px;
-            margin-top: 5px;
-            overflow: hidden;
-        }
-        .progress-fill {
-            height: 100%;
-            background-color: #2ecc71;
-            width: 0%;
-            transition: none; 
-        }
-        button {
-            display: block;
-            width: 100%;
-            padding: 10px;
-            background-color: #3498db;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            font-size: 1em;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-        button:hover:not(:disabled) {
-            background-color: #2980b9;
-        }
-        button:disabled {
-            background-color: #cccccc;
-            cursor: not-allowed;
-        }
-        /* Hire button styling based on level for visual distinction */
-        .hire-button-1 { background-color: #2ecc71; } 
-        .hire-button-2 { background-color: #f1c40f; } 
-        .hire-button-3 { background-color: #e67e22; } 
-        .hire-button-1:hover:not(:disabled) { background-color: #27ad60; }
-        .hire-button-2:hover:not(:disabled) { background-color: #f39c12; }
-        .hire-button-3:hover:not(:disabled) { background-color: #d35400; }
+    /* --- Button Styling Changes for "Green Squares" --- */
+    button {
+        /* display: block; REMOVED - Keep button width manageable/content-based */
+        width: 100%; /* Kept for the full-width block look of the hire/new-ticket buttons */
+        padding: 12px 10px; /* Adjusted padding for a more solid, squarish feel */
+        /* Changed primary button color to a prominent green */
+        background-color: #2ecc71; 
+        color: white;
+        border: 2px solid #2ecc71; /* Added solid border */
+        border-radius: 4px; /* Slightly reduced border-radius for a more 'square' look */
+        font-size: 1em;
+        font-weight: bold; /* Made text bold */
+        cursor: pointer;
+        margin-top: 10px;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        transition: background-color 0.2s, border-color 0.2s;
+    }
+    button:hover:not(:disabled) {
+        /* Hover effect is now a slightly darker green */
+        background-color: #27ad60; 
+        border-color: #27ad60;
+    }
+    button:disabled {
+        background-color: #cccccc;
+        border-color: #cccccc;
+        cursor: not-allowed;
+    }
 
-        #assign-button {
-            background-color: #e74c3c; 
-            font-size: 1.5em;
-            width: 50%;
-        }
-        #assign-button:hover:not(:disabled) {
-            background-color: #c0392b;
-        }
+    /* Hire button styling based on level for visual distinction - now more solid */
+    .hire-button-1 { background-color: #2ecc71; border-color: #2ecc71;} 
+    .hire-button-2 { background-color: #f1c40f; border-color: #f1c40f; } 
+    .hire-button-3 { background-color: #e67e22; border-color: #e67e22; } 
+    .hire-button-1:hover:not(:disabled) { background-color: #27ad60; border-color: #27ad60; }
+    .hire-button-2:hover:not(:disabled) { background-color: #f39c12; border-color: #f39c12; }
+    .hire-button-3:hover:not(:disabled) { background-color: #d35400; border-color: #d35400; }
+
+    #assign-button {
+        /* The Assign button keeps its distinct red/large style but gets the new button block look */
+        background-color: #e74c3c; 
+        border-color: #e74c3c;
+        font-size: 1.3em; /* Slightly reduced font for a cleaner look */
+        width: 60%; /* Made it slightly wider to fill the space better */
+        margin: 10px auto; /* Center the button */
+        display: block;
+    }
+    #assign-button:hover:not(:disabled) {
+        background-color: #c0392b;
+        border-color: #c0392b;
+    }
+
+    /* Original primary button color from #3498db is now applied to #new-ticket-btn for uniformity */
+    #new-ticket-btn {
+        background-color: #3498db;
+        border-color: #3498db;
+    }
+    #new-ticket-btn:hover:not(:disabled) {
+        background-color: #2980b9;
+        border-color: #2980b9;
+    }
+
+    /* ... (rest of the styles) ... */
+</style>
     </style>
 </head>
 <body>
