--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     
     // --- GIF ASSETS ---
     const GIFS = {
-        WORKING: 'https://media.giphy.com/media/l2JdVN53N0q12w4gg/giphy.gif', // Image of person typing/working
+        WORKING: 'https://gifdb.com/images/file/working-emoji-typing-gf7f51a0cl5ynyx9.gif', // Image of person typing/working
         IDLE: 'https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNmtpZ2VkcGg4cGRjM2J2aDVzYmR5cjQ1c2Fvb2o0bXRwd3d6ZzQyMCZlcD12MV9pbnRlcm5hbF9naWYmY3Q9cw/9RNGg4IQn0Qy4/giphy.gif' // Image of finger tapping/waiting
     };
     
